After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750990 - Fix unescaping Guardian Videos titles
Fix unescaping Guardian Videos titles
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: lua
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2015-06-15 12:06 UTC by Bastien Nocera
Modified: 2015-06-16 10:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
guardianvideos: Unescape the titles (978 bytes, patch)
2015-06-15 12:06 UTC, Bastien Nocera
committed Details | Review
lua-factory: Fix unescaping ANSI HTML entities (1.82 KB, patch)
2015-06-15 12:06 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-06-15 12:06:03 UTC
.
Comment 1 Bastien Nocera 2015-06-15 12:06:07 UTC
Created attachment 305280 [details] [review]
guardianvideos: Unescape the titles

Some of the titles might contain escaped characters, make sure to
unescape them before passing them on.
Comment 2 Bastien Nocera 2015-06-15 12:06:12 UTC
Created attachment 305281 [details] [review]
lua-factory: Fix unescaping ANSI HTML entities

HTML escape sequences still use Windows-1252/ANSI codes:
http://www.w3schools.com/charsets/ref_html_ansi.asp

Before this, – would unescape to a non-printable character, when it
should be unescaping to an ndash character.

This is especially visible in the Guardian Videos source.
Comment 3 Victor Toso 2015-06-15 20:32:45 UTC
Review of attachment 305281 [details] [review]:

Looks good.
Comment 4 Victor Toso 2015-06-15 20:33:25 UTC
Review of attachment 305280 [details] [review]:

Okay!
Comment 5 Bastien Nocera 2015-06-16 10:40:38 UTC
Attachment 305280 [details] pushed as bc7182c - guardianvideos: Unescape the titles
Attachment 305281 [details] pushed as 6052992 - lua-factory: Fix unescaping ANSI HTML entities