lua-factory: Fix unescaping ANSI HTML entities

HTML escape sequences still use Windows-1252/ANSI codes:
http://www.w3schools.com/charsets/ref_html_ansi.asp

Before this, &#150; would unescape to a non-printable character, when it
should be unescaping to an ndash character.

This is especially visible in the Guardian Videos source.

https://bugzilla.gnome.org/show_bug.cgi?id=750990